--- a/ch8p215CheckBoxRadio.html
+++ b/ch8p215CheckBoxRadio.html
@@ -17,6 +17,20 @@
     <form action="">
         <input type="radio" name="group1" value="Moola" >Moola <br>
         <input type="radio" name="group1" value="Gaajra" >Gaajra <br>
+        <input type="radio" name="group1" value="Santra" >Santra
+        <select name="" id="">
+            <option value="Kuch Nahi">Kuch Nahi</option>
+            <option value="Amb">Amb</option>
+            <option value="Kela">Kela</option>
+            <option value="Seb">Seb</option>
+            <option value="Matira">Matira</option>
+        </select>
+        <!-- We can also add Optgroup in Select to arrange items of various categories -->
+        <input type="reset" name="reset" id="" value="Reset" />
+    </form>
+    <h2>Text Area in a Form</h2>
+    <form action="">
+        <textarea name="" id="" cols="30" rows="10"></textarea>
     </form>
 </body>
 </html>
